<resources>
    <string name="app_name">Project test</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="prompt_email">username</string>
    <string name="prompt_password">password</string>
    <string name="logout">Logout</string>
    <string name="show_password">Show Password</string>
    <string name="create_profile">Create Profile</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="hello_world">hello world</string>
    <string name="primary_detail">PRIMARY DETAIL</string>
    <string name="create">Create</string>
    <string name="splashtitletextview">AUTH TEST APP</string>
    <string name="author">RezaIch</string>
    <string name="profile">Profile</string>
    <string name="repeat_password">Repeat password</string>
    <string name="post">post</string>
    <string name="time">time</string>
    <string name="text">text</string>
    <string name="delete">delete</string>
    <string name="attach">Attach</string>
    <string name="list_user">List User</string>
    <string name="user_name">user_name</string>
    <string name="type_message" />
    <string name="btn_sign_up" />
</resources>