<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profileEditImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_24"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="8dp"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_person_24"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
    <TextView
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/primary_detail"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/textBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Bio" />
    <EditText
        android:id="@+id/profileBioEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:minHeight="48dp"
        android:text="@string/bio" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/profileEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email" />
    <EditText
        android:id="@+id/profileEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:minHeight="48dp"
        android:text="@string/email" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>