<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="14sp"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:textSize="12sp"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text"
            android:textSize="12sp"
            android:layout_margin="5dp"/>

        <!--Video Player-->
        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/pvVideo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:use_controller="true"
            app:show_timeout="5000"
            app:controller_layout_id="@layout/custom_exoplayer"
            android:visibility="gone"
            app:resize_mode="fixed_height"
            tools:ignore="MissingConstraints"/>

        <!--Audio Player-->
        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/pvAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:controller_layout_id="@layout/custom_exoplayer"
            app:resize_mode="fixed_height"
            app:show_timeout="0"
            app:use_controller="true"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/ivPost"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btPostDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_margin="5dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>